--- a/TODO
+++ b/TODO
@@ -1,3 +1,3 @@
 
- * Implement pushSync in StackManip. The stack will take an integer and a value. The value is
-   pushed to the stack of the VM identified by the integer using a synchronous operation.
+ * Complete implementation of synced push. 
+ * Test removal from processTable.
